Update tailwind.config.js - dark mode is no longer applied by media query, but by class - add missing animation for Dialog component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,15 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
+html {
   color-scheme: light;
   height: 100%;
 }
 
-@media (prefers-color-scheme: dark) {
-  html,
-  body {
-    color-scheme: dark;
-  }
+html.dark {
+  color-scheme: dark;
 }
